--- a/settings/internal/com.kms.katalon.core.webui.remote.properties
+++ b/settings/internal/com.kms.katalon.core.webui.remote.properties
@@ -1,1 +1,1 @@
-{"REMOTE_WEB_DRIVER":{"os":"OS X","osVersion":"Ventura","browserName":"Chrome","browserVersion":"116.0","debug":"true","remoteWebDriverUrl":"https://ninonino_Z9WDIS:Ywv6C7viEbsKCDLeTywb@hub-cloud.browserstack.com/wd/hub","remoteWebDriverType":"Selenium","remoteMobileDriver":"ANDROID_DRIVER"}}
+{"REMOTE_WEB_DRIVER":{"device":"iPhone 14 Pro Max","osVersion":"16","real_mobile":"true","app":"bs://sample.app","remoteWebDriverUrl":"https://ninonino_Z9WDIS:Ywv6C7viEbsKCDLeTywb@hub-cloud.browserstack.com/wd/hub","remoteWebDriverType":"Appium","remoteMobileDriver":"IOS_DRIVER"}}
